fixed mobile collapse button

--- a/1-Alien-Attack/custom.css
+++ b/1-Alien-Attack/custom.css
@@ -1,13 +1,6 @@
 .navbar{
 	margin-bottom:20px;
 }
-@media screen 
-  and (device-width: 320px) 
-  and (device-height: 640px) 
-  and (-webkit-device-pixel-ratio: 2) {
-  	
-
-}
 #game-wrapper{
 	margin:0 auto;
 	width: 330px;
